--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.5",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.6",
     "@types/styled-components": "^5.1.25"
   }
 }
